--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,14 +10,14 @@ pipelines:
           caches:
             - node
           script:
-            - apk add --no-cache nodejs py-pip alpine-sdk
+            - apk add --no-cache nodejs  py-pip alpine-sdk
             - npm install lerna rimraf cross-env env-cmd -g
             - npm run setup
+            - npm run lint
 #            - export IMAGE_NAME=$DOCKER_REGISTRY_DEV:$BITBUCKET_BUILD_NUMBER
             - export IMAGE_NAME=request-manager
             - docker build -f ./docker/Dockerfile -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)" .
             - set -eu
-#            - apk add --no-cache py-pip bash
             - pip install --no-cache-dir docker-compose
             - docker-compose -v
             - npm run test
