--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "link": "common.sh link",
     "setup": "lerna clean --yes && lerna bootstrap --hoist",
     "containers": "docker-compose -f docker/docker-compose.yml up -d",
-    "test": "cross-env IMAGE_NAME=request-manager docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
-    "test:clean": "cross-env IMAGE_NAME=request-manager docker-compose -f docker/docker-compose.test.yml down"
+    "test": "docker-compose -f docker/docker-compose.test.yml up --abort-on-container-exit && npm run test:clean",
+    "test:clean": "docker-compose -f docker/docker-compose.test.yml down"
   }
 }
