--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,23 +10,9 @@ pipelines:
           caches:
             - node
           script:
-            - apk add --no-cache nodejs  py-pip alpine-sdk
-            - npm install lerna rimraf cross-env env-cmd -g
-            - npm run setup
-            - npm run lint
-#            - export IMAGE_NAME=$DOCKER_REGISTRY_DEV:$BITBUCKET_BUILD_NUMBER
-            - export IMAGE_NAME=request-manager
-            - docker build -f ./docker/Dockerfile -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)" .
-            - set -eu
-            - pip install --no-cache-dir docker-compose
-            - docker-compose -v
-            - npm run test
-#            - apt-get update
-#            - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
-#            - unzip awscli-bundle.zip -d /tmp/
-#            - /tmp/awscli-bundle/install -b ~/bin/aws
-#            - export PATH=~/bin:$PATH
-#            - docker build -t $IMAGE_NAME --build-arg SSH_PRIVATE_KEY="$(cat /opt/atlassian/pipelines/agent/data/id_rsa)"  .
-#            - eval $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
-#            - docker push $IMAGE_NAME
-
+            - apk update && apk add bash
+            - export IMAGE_NAME=request-manager:$BITBUCKET_BUILD_NUMBER
+            - ./bitbucket_scripts/setup.sh
+            - ./bitbucket_scripts/build.sh
+            - ./bitbucket_scripts/test.sh
+            - ./bitbucket_scripts/deploy.sh
