--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,8 +11,7 @@ pipelines:
             - node
           script:
             - apk update && apk add bash
-            - export IMAGE_NAME=request-manager:$BITBUCKET_BUILD_NUMBER
-            - ./scripts/setup.sh
+            - export IMAGE_NAME=$DOCKER_REGISTRY:$BITBUCKET_BUILD_NUMBER            - ./scripts/setup.sh
             - ./scripts/build.sh
             - ./scripts/test.sh
             - ./scripts/deploy.sh
