--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,8 @@ pipelines:
             - node
           script:
             - apk update && apk add bash
-            - export IMAGE_NAME=$DOCKER_REGISTRY:$BITBUCKET_BUILD_NUMBER            - ./scripts/setup.sh
+            - export IMAGE_NAME=$DOCKER_REGISTRY:$BITBUCKET_BUILD_NUMBER
+            - ./scripts/setup.sh
             - ./scripts/build.sh
             - ./scripts/test.sh
             - ./scripts/deploy.sh
