--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@welldone-software/node-toolbelt": "^1.2.0",
+    "clarify": "^2.1.0",
     "env-cmd": "^7.0.0",
     "lodash": "^4.17.5",
     "require-all": "^2.2.0",
     "sequelize": "^4.35.2",
     "stox-common": "git@bitbucket.org:stx_site/stox-common.git#dev",
+    "trace": "^3.1.0",
     "uuid4": "^1.0.0",
     "web3": "^1.0.0-beta.34"
   },
