--- a/packages/request-manager-api/.env.example
+++ b/packages/request-manager-api/.env.example
@@ -3,3 +3,4 @@ DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
 NETWORK='MAIN'
 WEB_3_URL=''
 DEFAULT_GAS_PRIORITY='medium'
+MQ_CONNECTION_URL='localhost:61613'
