--- a/packages/request-manager-api/.env.example
+++ b/packages/request-manager-api/.env.example
@@ -2,3 +2,4 @@ PORT=3003
 DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
 NETWORK='MAIN'
 WEB_3_URL=''
+DEFAULT_GAS_PRIORITY='medium'
