--- a/packages/request-reader/.env.example
+++ b/packages/request-reader/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL='postgres://postgres:secret@localhost:5434/stoxbcrm'
 NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
+DEFAULT_GAS_PRIORITY='medium'
