--- a/packages/request-reader/package.json
+++ b/packages/request-reader/package.json
@@ -4,7 +4,7 @@
   "description": "Reads incoming requests from a dedicated queue and writes them to the Requests table",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon -e js . | pino",
+    "start": "nodemon $NODE_DEBUG_OPTION -e js . | pino",
     "serve:trace": "node --stack_trace_limit=25 -r trace -r clarify .",
     "serve": "node .",
     "lint": "eslint -c ../../.eslintrc.yml .",
