--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,7 +19,8 @@
     "trace": "^3.1.0",
     "big.js": "^5.0.3",
     "uuid4": "^1.0.0",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.34",
+    "moment": "^2.19.1"
   },
   "devDependencies": {
     "chai-shallow-deep-equal": "^1.4.6",
