--- a/packages/transactions-monitor/.env.example
+++ b/packages/transactions-monitor/.env.example
@@ -5,3 +5,4 @@ MQ_CONNECTION_URL='localhost:61613'
 REQUIRED_CONFIRMATIONS=0
 LIMIT_TRANSACTIONS=10
 WEB_3_URL = 'http://localhost:8545/'
+PENDING_HOURS_FOR_RESEND = 24
