--- a/packages/transactions-writer/.env.example
+++ b/packages/transactions-writer/.env.example
@@ -5,4 +5,5 @@ MQ_CONNECTION_URL='localhost:61613'
 WEB_3_URL = 'http://localhost:8545/'
 TRANSACTIONS_SIGNER_BASE_URL = 'localhost:8090/api/v1'
 LIMIT_TRANSACTIONS=10
+MINIMUM_ACCOUNT_BALANCE=100000000000000000
 
