--- a/packages/request-handler/.env.example
+++ b/packages/request-handler/.env.example
@@ -4,4 +4,4 @@ NETWORK='MAIN'
 MQ_CONNECTION_URL='localhost:61613'
 HANDLE_PENDING_REQUEST_CRON='*/10 * * * * *'
 LIMIT_PENDING_REQUEST=10
-WITHDRAW_ETHER_ACCOUNT='0xa28EE03590c8Ff8a65bd7D9180B8eD869a147dC2'
+WITHDRAW_ETHER_ACCOUNT=''
