--- a/packages/transactions-signer/package.json
+++ b/packages/transactions-signer/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.222.1",
     "clarify": "^2.1.0",
     "env-cmd": "^7.0.0",
+    "hex2dec": "^1.1.0",
     "ethereumjs-tx": "^1.3.4",
     "require-all": "^2.2.0",
     "stox-bc-request-manager-common": "1.0.0",
